[package]
name = "cant"
version = "0.1.0"
edition = "2021"
authors = ["Michelle Tilley <michelle@michelletilley.net>"]
description = "Cant is a tool for processing your logs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tui-input = "0.11.1"
